--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "baseUrl": "src",
     "jsx": "react-jsx"
   },
   "include": [
     "src"
-  ]
+  ],
 }
