--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
     "baseUrl": "src",
     "jsx": "react-jsx"
   },
